--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -126,7 +126,7 @@
                             <TextBlock Text="Cập nhật thực đơn" FontFamily="Montserrat" VerticalAlignment="Center" Margin="20 10"></TextBlock>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem  Height="60">
+                    <ListViewItem x:Name="ft_ThongKeDoanhThu"  Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Margin="10" Kind="PlaylistEdit" Width="25" Height="25" VerticalAlignment="Center"></materialDesign:PackIcon>
                             <TextBlock Text="Thống kê doanh thu" FontFamily="Montserrat" VerticalAlignment="Center" Margin="20 10"></TextBlock>
